--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: moneytalks-db
     image: postgres:15-alpine
     volumes:
-      - ../data/postgres:/data
+      - ./data/postgres:/data
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
